src/css/sass/partials/elements.scss
/* ... */
@media only screen and (max-width:480px) {
	.heading-with-tabs {
		.heading-tab-container{
			.container-inner {
				nav {
					ul{
						li{
							width: 100%;
						}
					}
				}
			}
		}
	}
}

.zig-zag {
	.container {
		.row-center {
			max-width: 1200px;
			width: 95%;
			margin: 60px auto;
			display: flex;
			align-items: center;
			padding-left: 10px;
			padding-right: 10px;
		}
		.row-top {
			max-width: 1200px;
			width: 95%;
			margin: 60px auto;
			display: flex;
			align-items: flex-start;
			padding-left: 10px;
			padding-right: 10px;
		}

		.img-text {
			flex-direction: row;
			justify-content: flex-start;
			.column-img{
				padding-right: 5%;
			}
		}
		.text-img {
			flex-direction: row-reverse;
			justify-content: space-between;
			.column-img{
				img{
					float: right;
				}
			}
		}
		.column-img {
			flex-basis: 16%;
		}
		.column-text {
			flex-basis: 82%;
		}
		h1 {
			font-size: 42px;
		}
		h2 {
			font-size: 38px;
		}
		h3 {
			font-size: 34px;

		}
		h4 {
			font-size: 30px;
		}
		h1, h2, h3, h4 {
			font-family: 'ralewayregular';
			font-weight: 400;
			color: #2b79a7;
			margin-bottom:10px;
			margin-top: 0;
			line-height: 1.1;
			a {
				text-decoration: none;
				color: #2b79a7;
				transition:all 0.2s;
				&:hover{
					cursor: pointer;
					text-decoration: underline;
				}
			}
		}
		p {
			line-height: 1.7;
			font-family: 'open_sansregular';
			font-weight: 400;
			font-size: 18px;
			margin-top: 0;
			margin-bottom:10px;
			color:$text-color;
			a {
				text-decoration: none;
				transition:color 0.2s;
				color:#337ab7;
				&:hover{
					cursor: pointer;
				}
			}
		}
	}
}

@media only screen and (max-width:991px) {
	.zig-zag {
		.row{
			h1{
				font-size: 38px;
			}
			h2{
				font-size: 34px;
			}
			h3{
				font-size: 32px;
			}
		}
	}
}

@media only screen and (max-width:768px) {
	.zig-zag {
		.container {
			.row-center, .row-top {
				flex-direction: column;
				align-items: center;
			}
			.column-img {
				margin-bottom: 20px;
				img {
					max-width: 90px;
					width: 100%;
				}
			}
		}
	}
}

.slider {
	.container {
		padding-left: 10%;
		padding-right: 10%;
		.main-slider {
			max-width: 750px;
			width: 95%;
			margin: 0 auto;
			.slick-next {
				right: 55px;
			}
			.slick-prev {
				left: 26px;
				z-index: 9999;
			}
			.slick-prev:before, .slick-next:before {
				font-size: 50px;
				color: #b5b4b4;
			}
			.slick-slide {
				width: 100%;
				max-width: 750px;
				padding: 0 1.2%;
				&:focus {
					display: none;
				}
				h1, h2, h3, h4, h5 {
					font-family: 'ralewayregular';
					font-weight: 400;
					line-height: 1.1;
					color: #2b79a7;
					margin: 20px 0 10px;
					a {
						text-decoration: underline;
						color: #2b79a7;
						transition: all 0.2s;
						&:hover {
							cursor: pointer;
						}
					}
				}
				h1 {
					font-size: 32px;
				}
				h2 {
					font-size: 28px;
				}
				h3 {
					font-size: 24px;
				}
				h4 {
					font-size: 22px;
				}
				h5 {
					font-size: 17px;
				}
				p, blockquote {
					font-family: 'open_sansregular';
					font-weight: 400;
					color: $text-color;
					line-height: 1.7;
					a {
						text-decoration: underline;
						transition: all 0.2s;
						&:hover {
							cursor: pointer;
						}
					}
				}
				p {
					font-size: 15px;
					margin: 0;
				}
				blackquote {
					display: block;
					font-size: 18px;
				}
				blockquote {
					display: block;
					font-size: 18px;
					width: 85%;
					margin: 0 auto;
				}
			}
		}
	}
}

@media only screen and (max-width:991px) {
	.slider {
		.container {
			.main-slider {
				.slick-slide {
					h1 {
						font-size: 28px;
					}
					h2 {
						font-size: 24px;
					}
					h3 {
						font-size: 20px;
					}
					h4 {
						font-size: 18px;
					}
				}
			}
		}
	}
}

@media only screen and (max-width:768px) {
	.slider {
		.container {
			.main-slider {
				.slick-slide{
					padding: 0 1.25%;
				}
				.slick-next {
					right:53px;
				}
				.slick-prev {
					left:25px;
				}
			}
		}
	}
}
@media only screen and (max-width:650px) {
	.slider {
		.container {
			.main-slider {
				.slick-next {
					right:45px;
				}
				.slick-prev {
					left:15px;
				}
			}
		}
	}
}
@media only screen and (max-width:600px) {
	.slider {
		.container {
			.main-slider {
				.slick-next {
					right:40px;
				}
				.slick-prev {
					left:10px;
				}
			}
		}
	}
}
@media only screen and (max-width:490px) {
	.slider {
		.container {
			.main-slider {
				.slick-next {
					right:35px;
				}
				.slick-prev {
					left:5px;
				}
			}
		}
	}
}
@media only screen and (max-width:450px) {
	.slider {
		.container {
			.main-slider {
				.slick-slide{
					padding: 0 1.5%;
				}
			}
		}
	}
}
@media only screen and (max-width:400px) {
	.slider {
		.container {
			.main-slider {
				.slick-next {
					right:40px;
				}
				.slick-prev {
					left:12px;
				}
			}
		}
	}
}

